######################################################
#	Tcl/Tk Project manager 2.0
#	Distributed under GNU Public License
# Author: Sergey Kalinin svk@nuk-svl.ru
# Home page: https://nuk-svk.ru
######################################################

20/06/2022
    - Beginning the project

13/07/2022
    - Added open file dialog
    - Added open folder dialog
    - Added save file function
    - Added a command line argument support (open file(s) or folder(s))
    - Added TCL and BASH highlite
    - Added a configuration file (progman.ini) and a procedure for reading/saving them

14/07/2022
    - Added On/Off viewing toolbar
    - Added On/Off viewing line numbers bar
    - Added a Comment/Uncomment text support
    - Added text auto format

15/07/2022
    - Added a close file (tab) function with Ctrl+w
    - Added a insert/remove the tabspace
    - Fixed comment/uncomment selected text

20/07/2022
    - Fixed indent text
    - Fixed insert " and '
    - Added a main window geometry option into config, and autosave current geometry

21/07/2022
    - Added Save file dialog before tab was closed
    - Added Save file dialog when exiting, if file was modify